test-harness/src/snapshots/toolchain__enum-repr into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: enum-repr
    manifest: enum-repr/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = 'Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'

[stdout]
diagnostics = []

[stdout.files]
"Enum_repr.v" = '''
(* File automatically generated by Hacspec *)
From Hacspec Require Import Hacspec_Lib MachineIntegers.
From Coq Require Import ZArith.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.

Definition discriminant_EnumWithRepr_ExplicitDiscr1 : int16 :=
  (@repr WORDSIZE16 1).

Definition discriminant_EnumWithRepr_ExplicitDiscr2 : int16 :=
  (@repr WORDSIZE16 5).

Inductive t_EnumWithRepr : Type :=
| EnumWithRepr_ExplicitDiscr1 : t_EnumWithRepr
| EnumWithRepr_ExplicitDiscr2 : t_EnumWithRepr
| EnumWithRepr_ImplicitDiscrEmptyTuple : t_EnumWithRepr
| EnumWithRepr_ImplicitDiscrEmptyStruct : t_EnumWithRepr.

Definition t_EnumWithRepr_cast_to_repr (x : t_EnumWithRepr_t) : int16 :=
  match x with
  | EnumWithRepr_ExplicitDiscr1  =>
    discriminant_EnumWithRepr_ExplicitDiscr1
  | EnumWithRepr_ExplicitDiscr2  =>
    discriminant_EnumWithRepr_ExplicitDiscr2
  | EnumWithRepr_ImplicitDiscrEmptyTuple  =>
    discriminant_EnumWithRepr_ExplicitDiscr2.+(@repr WORDSIZE16 1)
  | EnumWithRepr_ImplicitDiscrEmptyStruct  =>
    discriminant_EnumWithRepr_ExplicitDiscr2.+(@repr WORDSIZE16 2)
  end.

(*Not implemented yet? todo(item)*)

Definition f (_ : unit) : int32 :=
  let _x := cast (discriminant_EnumWithRepr_ExplicitDiscr2.+(@repr WORDSIZE16 0)) : int16 in
  (cast (t_EnumWithRepr_cast_to_repr EnumWithRepr_ImplicitDiscrEmptyTuplet_EnumWithRepr_t)).+(cast (t_EnumWithRepr_cast_to_repr EnumWithRepr_ImplicitDiscrEmptyStructt_EnumWithRepr_t)).

Definition ff__CONST : int16 :=
  cast (discriminant_EnumWithRepr_ExplicitDiscr1.+(@repr WORDSIZE16 0)).

Definition get_casted_repr (x : t_EnumWithRepr_t) : int64 :=
  cast (t_EnumWithRepr_cast_to_repr x).

Definition get_repr (x : t_EnumWithRepr_t) : int16 :=
  t_EnumWithRepr_cast_to_repr x.
'''
