test-harness/src/snapshots/toolchain__include-flag into-fstar.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: fstar
  info:
    name: include-flag
    manifest: cli/include-flag/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Include_flag.fst" = '''
module Include_flag
#set-options "--fuel 0 --ifuel 1 --z3rlimit 15"
open Core
open FStar.Mul

type t_Foo = | Foo : t_Foo

class t_Trait (v_Self: Type0) = { __marker_trait_t_Trait:Prims.unit }

[@@ FStar.Tactics.Typeclasses.tcinstance]
let impl_Trait_for_Foo: t_Trait t_Foo = { __marker_trait = () }

/// Indirect dependencies
let main_a_a (_: Prims.unit) : Prims.unit = ()

let main_b_a (_: Prims.unit) : Prims.unit = ()

let main_c_a (_: Prims.unit) : Prims.unit = ()

let main_a_b (_: Prims.unit) : Prims.unit = ()

let main_b_b (_: Prims.unit) : Prims.unit = ()

let main_c_b (_: Prims.unit) : Prims.unit = ()

let main_a_c (_: Prims.unit) : Prims.unit = ()

/// Direct dependencies
let main_a (#v_T: Type0) (#[FStar.Tactics.Typeclasses.tcresolve ()] i1: t_Trait v_T) (x: v_T)
    : Prims.unit =
  let _:Prims.unit = main_a_a () in
  let _:Prims.unit = main_a_b () in
  let _:Prims.unit = main_a_c () in
  ()

let main_b_c (_: Prims.unit) : Prims.unit = ()

let main_b (_: Prims.unit) : Prims.unit =
  let _:Prims.unit = main_b_a () in
  let _:Prims.unit = main_b_b () in
  let _:Prims.unit = main_b_c () in
  ()

let main_c_c (_: Prims.unit) : Prims.unit = ()

let main_c (_: Prims.unit) : Prims.unit =
  let _:Prims.unit = main_c_a () in
  let _:Prims.unit = main_c_b () in
  let _:Prims.unit = main_c_c () in
  ()

/// Entrypoint
let main (_: Prims.unit) : Prims.unit =
  let _:Prims.unit = main_a #t_Foo (Foo <: t_Foo) in
  let _:Prims.unit = main_b () in
  let _:Prims.unit = main_c () in
  ()
'''
